--- a/style.css
+++ b/style.css
@@ -60,12 +60,7 @@ main {
 #btn1 {
     background-color: rgb(100, 181, 247);
     color: white;
-    margin-right: 10px ;
-}
-
-#btn2 {
-    background-color: rgb(255, 255, 255);
-    color: rgb(204, 199, 199);
+    margin-left: 10px ;
 }
 
 /* LISTE */
